[gd_scene load_steps=6 format=3 uid="uid://i02j1vjryb8i"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_dbnsj"]
[ext_resource type="PackedScene" uid="uid://ddq61ipdadwe4" path="res://scenes/Player.tscn" id="3_nvqf1"]
[ext_resource type="PackedScene" uid="uid://ciikr3q5806gn" path="res://scenes/HUD.tscn" id="4_hc2h3"]
[ext_resource type="PackedScene" uid="uid://b3utnax8s52a" path="res://scenes/PowerUp.tscn" id="5_u6bmt"]

[sub_resource type="Curve2D" id="Curve2D_x8quo"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -3, -4, 0, 0, 0, 0, 1151, 0, 0, 0, 0, 0, 1155, 645, 0, 0, 0, 0, -5, 642, 0, 0, 0, 0, -3, -4)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_dbnsj")

[node name="Player" parent="." instance=ExtResource("3_nvqf1")]

[node name="ElapsedTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StarTimer" type="Timer" parent="."]
autostart = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(583, 276)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_x8quo")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-3, -4)
rotation = 0.00346619

[node name="HUD" parent="." instance=ExtResource("4_hc2h3")]

[node name="PowerUp" parent="." instance=ExtResource("5_u6bmt")]
collision_mask = 1

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="ElapsedTimer" to="." method="_on_elapsed_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="StarTimer" to="." method="_on_star_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
